--- a/Cetours/Cetours.csproj
+++ b/Cetours/Cetours.csproj
@@ -5,10 +5,34 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Title>$(AssemblyName)</Title>
+    <Version>1.0.2</Version>
+    <Authors>Yotic</Authors>
+    <Company />
+    <Description>Low-level detours library for internally hooking native functions</Description>
+    <PackageReadmeFile>Pack.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/Yoticc/Cetours</RepositoryUrl>
+    <PackageTags>naot detours hooking</PackageTags>
+    <Platforms>AnyCPU;x64</Platforms>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>False</Optimize>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <Optimize>False</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Yotic.Memory.Extensions" Version="1.0.3" />
+    <PackageReference Include="Yotic.Memory.Extensions" Version="1.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Pack.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
