Changed default registre for hooks

--- a/Cetours/Cetours.csproj
+++ b/Cetours/Cetours.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Title>$(AssemblyName)</Title>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
     <Authors>Yotic</Authors>
     <Company />
     <Description>Low-level detours library for internally hooking native functions</Description>
